# aarhus-rust-robot

./: Cargo.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile  entrypoint.sh
src/: bridge.rs  main.rs
