[package]
name = "rustaarhusdemo"
version = "0.1.0"
edition = "2024"


[dependencies]
r2r = { version = "0.9.4" }
tracing = {version = "0.1.41", features = ["attributes", "std", "tracing-attributes", "async-await"]}
tracing-subscriber = {version="0.3.19", features=["env-filter", "fmt"]}
uuid = {version = "1.15.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tokio-stream = {version ="0.1.16", features=["full"] }
tokio-util = "0.7.12"
async-stream = "0.3.6"
testcontainers = "0.23.3"
test-log = {version="0.2.17", features=["trace"]}
